updated token to personal token in workflow setting

--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GH_PAGES_TOKEN }}
+        personal_token: ${{ secrets.GH_PAGES_TOKEN }}  # Use personal_token instead of github_token
         publish_dir: ./build
         publish_branch: main
         external_repository: urvishp80/urvishp80.github.io
