added links in the view and made changes in the prompt for creating summary

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-openai
-tiktoken
-Flask
-python-dotenv
-python-dateutil
-requests
-pandas
-pytz
-tqdm
-beautifulsoup4
-feedgen
-feedparser
-schedule
-elasticsearch
-Frozen-Flask
+openai~=0.27.4
+tiktoken~=0.3.3
+Flask~=2.3.1
+python-dotenv~=1.0.0
+python-dateutil~=2.8.2
+requests~=2.29.0
+pandas~=2.0.1
+pytz~=2023.3
+tqdm~=4.65.0
+beautifulsoup4~=4.12.2
+feedgen~=0.9.0
+feedparser~=6.0.10
+schedule~=1.2.0
+elasticsearch~=8.7.0
+Frozen-Flask~=0.18
+MarkupSafe~=2.1.2
