--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -2,7 +2,7 @@ name: Daily Python Script Execution
 
 on:
   schedule:
-    - cron: "22 19 * * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
   repository_dispatch:
 
@@ -36,9 +36,16 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config user.name "urvishp80"
-        git config user.email "urvishp80@gmail.com"
+        git config user.name ${{ secrets.USERNAME_GIT }}
+        git config user.email ${{ secrets.GMAIL_GIT }}
+        git config --global --add safe.directory /__w/{mailing-list-summaries}/{mailing-list-summaries}
+        git config --global --add safe.directory /github/workspace
         git add .
         git status
         git commit -m "Update generated files [skip ci]"
-        git push
+
+    - name: Push changes
+      uses: ad-m/github-push-action@v0.5.0
+      with:
+        branch: main
+        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
