--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -34,10 +34,8 @@ jobs:
     - name: Execute Python script
       run: python xmls_generator_production.py
 
-    - name: Allow dubious ownership for /github/workspace
-      run: |
-        sudo git config --global --add safe.directory /github/workspace
-        sudo git config --global --add safe.directory /__w/{mailing-list-summaries}/{mailing-list-summaries}
+    - name: Change ownership of /.github/workflows
+      run: sudo chown -R $(id -u):$(id -g) /.github/workflows
 
     - name: Commit and push changes
       run: |
@@ -48,7 +46,7 @@ jobs:
         git commit -m "Update generated files [skip ci]"
 
     - name: Push changes
-      uses: ad-m/github-push-action@v0.5.0
+      uses: ad-m/github-push-action@master
       with:
         branch: main
         github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
