--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -31,4 +31,4 @@ jobs:
         personal_token: ${{ secrets.GH_PAGES_TOKEN }}  # Use personal_token instead of github_token
         publish_dir: ./build
         publish_branch: main
-        external_repository: urvishp80/urvishp80.github.io
+        external_repository: bitcoinsearch/mailing-list-summaries-site
