add cname to actions deployment

--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -32,3 +32,4 @@ jobs:
         publish_dir: ./build
         publish_branch: main
         external_repository: bitcoinsearch/mailing-list-summaries-site
+        cname: feed.bitcoinsearch.xyz
