Fix indentation error in workflow

--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -38,5 +38,4 @@ jobs:
       run: python xmls_generator_production.py
 
     - name: Commit changes
-        run: |
-          git diff --quiet && git diff --staged --quiet || (git add . ; git commit -m "Updated new generated files"; git push)
+      run: git diff --quiet && git diff --staged --quiet || (git add . ; git commit -m "Updated new generated files"; git push)
