--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -36,6 +36,11 @@ jobs:
 
     - name: Execute Python script
       run: python xmls_generator_production.py
+    
+    - name: Configure Git
+      run: |
+         git config --global user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
+         git config --global user.name "${{ secrets.GIT_AUTHOR_NAME }}"
 
     - name: Commit changes
       run: git diff --quiet && git diff --staged --quiet || (git add . ; git commit -m "Updated new generated files"; git push)
