Update xmls_gen_cron_job to not use global config

--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -39,8 +39,8 @@ jobs:
     
     - name: Configure Git
       run: |
-         git config --global user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
-         git config --global user.name "${{ secrets.GIT_AUTHOR_NAME }}"
+         git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
+         git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
 
     - name: Commit changes
       run: git diff --quiet && git diff --staged --quiet || (git add . ; git commit -m "Updated new generated files"; git push)
