--- a/.github/workflows/homepage_xml_gen_cron_job.yml
+++ b/.github/workflows/homepage_xml_gen_cron_job.yml
@@ -42,5 +42,12 @@ jobs:
          git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
          git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
 
-    - name: Commit changes
-      run: git diff --quiet && git diff --staged --quiet || (git add . ; git commit -m "Updated homepage XML file"; git push)
+    - name: Add and commit changes
+      run: |
+        git add .
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m "Updated new generated files"
+          git push
+        fi
