--- a/.github/workflows/push_summary_to_elasticsearch_cron_job.yml
+++ b/.github/workflows/push_summary_to_elasticsearch_cron_job.yml
@@ -1,8 +1,8 @@
-name: Daily Python Script Execution
+name: Daily Push Summary From XML Files to ES INDEX
 
 on:
   schedule:
-    - cron: "0 1 * * *"
+    - cron: "0 3 * * *"
   workflow_dispatch:
   repository_dispatch:
 
@@ -35,19 +35,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Execute Python script
-      run: python xmls_generator_production.py
-    
-    - name: Configure Git
-      run: |
-         git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
-         git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
-
-    - name: Add and commit changes
-      run: |
-        git add .
-        if git diff --staged --quiet; then
-          echo "No changes to commit"
-        else
-          git commit -m "Updated newly generated xml files"
-          git push
-        fi
+      run: python push_summary_to_es.py
