resolve dependencies issue in github workflows

--- a/.github/workflows/push_summary_to_elasticsearch_cron_job.yml
+++ b/.github/workflows/push_summary_to_elasticsearch_cron_job.yml
@@ -29,10 +29,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.x
+        python-version: 3.10.x
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+         pip install --upgrade pip setuptools
+         pip install -r requirements.txt
 
     - name: Execute Python script
       run: python push_summary_to_es.py
