--- a/.github/workflows/push_combined_summary_to_es_cron_job.yml
+++ b/.github/workflows/push_combined_summary_to_es_cron_job.yml
@@ -2,7 +2,7 @@ name: Daily Push Combined Summary From XML Files to ES INDEX
 
 on:
   schedule:
-    - cron: "30 2 * * *"
+    - cron: "30 2 * * *" # every day at 02:30 AM UTC
   workflow_dispatch:
   repository_dispatch:
 
