--- a/.github/workflows/push_summary_to_elasticsearch_cron_job.yml
+++ b/.github/workflows/push_summary_to_elasticsearch_cron_job.yml
@@ -2,7 +2,7 @@ name: Daily Push Summary From XML Files to ES INDEX
 
 on:
   schedule:
-    - cron: "0 2 * * *"
+    - cron: "0 2 * * *" # every day at 02:00 AM UTC
   workflow_dispatch:
   repository_dispatch:
 
