--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -1,7 +1,7 @@
 name: Daily XML Generation Script
 on:
   schedule:
-    - cron: "0 1 * * *"
+    - cron: "0 1 * * *" # every day at 01:00 AM UTC
   workflow_dispatch:
   repository_dispatch:
 
