--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -82,7 +82,7 @@ jobs:
                 COMMIT_MSG="$COMMIT_MSG/${{ github.event.inputs.start_month }}"
               fi
               if [ -n "${{ github.event.inputs.months_limit }}" ]; then
-                COMMIT_MSG="$COMMIT_MSG (${github.event.inputs.months_limit} months)"
+                COMMIT_MSG="$COMMIT_MSG (${{ github.event.inputs.months_limit }} months)"
               fi
             fi
             git commit -m "$COMMIT_MSG"
@@ -92,7 +92,7 @@ jobs:
               COMMIT_MSG="$COMMIT_MSG/${{ github.event.inputs.start_month }}"
             fi
             if [ -n "${{ github.event.inputs.months_limit }}" ]; then
-              COMMIT_MSG="$COMMIT_MSG (${github.event.inputs.months_limit} months)"
+              COMMIT_MSG="$COMMIT_MSG (${{ github.event.inputs.months_limit }} months)"
             fi
             COMMIT_MSG="$COMMIT_MSG with threading structure"
             git commit -m "$COMMIT_MSG"
