--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -3,6 +3,27 @@ on:
   schedule:
     - cron: "0 1 * * *" # every day at 01:00 AM UTC
   workflow_dispatch:
+    inputs:
+      start_year:
+        description: 'Start year for processing (e.g., 2022). If not specified, uses default 90 days.'
+        required: false
+        default: ''
+        type: string
+      start_month:
+        description: 'Start month (1-12). Only used with start_year. If not specified, starts from January.'
+        required: false
+        default: ''
+        type: string
+      months_limit:
+        description: 'Limit processing to N months from start date. Helps avoid ES overload (e.g., 6 for 6 months).'
+        required: false
+        default: ''
+        type: string
+      update_threading_only:
+        description: 'Only update threading structure without generating new files'
+        required: false
+        default: false
+        type: boolean
   repository_dispatch:
 
 permissions:
@@ -18,6 +39,10 @@ jobs:
       ES_USERNAME: ${{ secrets.ES_USERNAME }}
       ES_PASSWORD: ${{ secrets.ES_PASSWORD }}
       ES_INDEX: ${{ secrets.ES_INDEX }}
+      START_YEAR: ${{ github.event.inputs.start_year }}
+      START_MONTH: ${{ github.event.inputs.start_month }}
+      MONTHS_LIMIT: ${{ github.event.inputs.months_limit }}
+      UPDATE_THREADING_ONLY: ${{ github.event.inputs.update_threading_only }}
 
     steps:
     - uses: actions/checkout@v2
@@ -49,6 +74,30 @@ jobs:
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Updated newly generated xml files"
+          if [ "${{ github.event.inputs.update_threading_only }}" = "true" ]; then
+            COMMIT_MSG="Updated XML files with threading structure (threading update only)"
+            if [ -n "${{ github.event.inputs.start_year }}" ]; then
+              COMMIT_MSG="$COMMIT_MSG from ${{ github.event.inputs.start_year }}"
+              if [ -n "${{ github.event.inputs.start_month }}" ]; then
+                COMMIT_MSG="$COMMIT_MSG/${{ github.event.inputs.start_month }}"
+              fi
+              if [ -n "${{ github.event.inputs.months_limit }}" ]; then
+                COMMIT_MSG="$COMMIT_MSG (${{ github.event.inputs.months_limit }} months)"
+              fi
+            fi
+            git commit -m "$COMMIT_MSG"
+          elif [ -n "${{ github.event.inputs.start_year }}" ]; then
+            COMMIT_MSG="Updated XML files from year ${{ github.event.inputs.start_year }}"
+            if [ -n "${{ github.event.inputs.start_month }}" ]; then
+              COMMIT_MSG="$COMMIT_MSG/${{ github.event.inputs.start_month }}"
+            fi
+            if [ -n "${{ github.event.inputs.months_limit }}" ]; then
+              COMMIT_MSG="$COMMIT_MSG (${{ github.event.inputs.months_limit }} months)"
+            fi
+            COMMIT_MSG="$COMMIT_MSG with threading structure"
+            git commit -m "$COMMIT_MSG"
+          else
+            git commit -m "Updated newly generated XML files with threading structure"
+          fi
           git push
         fi
