--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -3,22 +3,6 @@ on:
   schedule:
     - cron: "0 1 * * *" # every day at 01:00 AM UTC
   workflow_dispatch:
-    inputs:
-      from_year:
-        description: 'Start year for processing range (e.g., 2020). If not specified, uses default 90 days.'
-        required: false
-        default: ''
-        type: string
-      to_year:
-        description: 'End year for processing range (e.g., 2024). If not specified, processes only from_year.'
-        required: false
-        default: ''
-        type: string
-      update_threading_only:
-        description: 'Only update threading structure without generating new files'
-        required: false
-        default: false
-        type: boolean
   repository_dispatch:
 
 permissions:
@@ -34,9 +18,6 @@ jobs:
       ES_USERNAME: ${{ secrets.ES_USERNAME }}
       ES_PASSWORD: ${{ secrets.ES_PASSWORD }}
       ES_INDEX: ${{ secrets.ES_INDEX }}
-      FROM_YEAR: ${{ github.event.inputs.from_year }}
-      TO_YEAR: ${{ github.event.inputs.to_year }}
-      UPDATE_THREADING_ONLY: ${{ github.event.inputs.update_threading_only }}
 
     steps:
     - uses: actions/checkout@v2
@@ -68,25 +49,6 @@ jobs:
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          if [ "${{ github.event.inputs.update_threading_only }}" = "true" ]; then
-            COMMIT_MSG="Updated XML files with threading structure (threading update only)"
-            if [ -n "${{ github.event.inputs.from_year }}" ]; then
-              if [ -n "${{ github.event.inputs.to_year }}" ]; then
-                COMMIT_MSG="$COMMIT_MSG for years ${{ github.event.inputs.from_year }}-${{ github.event.inputs.to_year }}"
-              else
-                COMMIT_MSG="$COMMIT_MSG for year ${{ github.event.inputs.from_year }}"
-              fi
-            fi
-            git commit -m "$COMMIT_MSG"
-          elif [ -n "${{ github.event.inputs.from_year }}" ]; then
-            if [ -n "${{ github.event.inputs.to_year }}" ]; then
-              COMMIT_MSG="Updated XML files for years ${{ github.event.inputs.from_year }}-${{ github.event.inputs.to_year }} with threading structure"
-            else
-              COMMIT_MSG="Updated XML files for year ${{ github.event.inputs.from_year }} with threading structure"
-            fi
-            git commit -m "$COMMIT_MSG"
-          else
-            git commit -m "Updated newly generated XML files with threading structure"
-          fi
+          git commit -m "Updated newly generated xml files"
           git push
         fi
