restore deleted authors

--- a/.github/workflows/restore_missing_authors.yml
+++ b/.github/workflows/restore_missing_authors.yml
@@ -85,14 +85,13 @@ jobs:
         else
           CHANGED_FILES=$(git diff --staged --name-only | wc -l)
           echo "📝 Committing $CHANGED_FILES changed files"
-          git commit -m "fix: restore missing author tags in XML files
-
-- Restored author information for XML files missing <author> tags
-- Author data fetched from Elasticsearch
-- This fixes the issue where threading updater deleted authors
-- Related: ISSUE_ANALYSIS_AND_FIX.md
-
-Total files restored: Check workflow logs for details"
+          git commit -m "fix: restore missing author tags in XML files" \
+                     -m "" \
+                     -m "- Restored author information for XML files missing <author> tags" \
+                     -m "- Author data fetched from Elasticsearch" \
+                     -m "- This fixes the issue where threading updater deleted authors" \
+                     -m "" \
+                     -m "Total files restored: Check workflow logs for details"
           git push
           echo "✅ Changes pushed successfully!"
         fi
