--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -1,26 +1,28 @@
 name: Daily XML Generation Script
 on:
-  schedule:
-    - cron: "0 1 * * *" # every day at 01:00 AM UTC
-  workflow_dispatch:
-  repository_dispatch:
+  workflow_dispatch:  # Manual trigger only - same as other workflows
+    inputs:
+      dry_run:
+        description: 'Dry run (check only, no restoration)'
+        required: false
+        default: 'false'
 
 permissions:
   contents: write
 
 jobs:
-  execute_and_commit:
+  restore_authors:
     runs-on: ubuntu-latest
 
     env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       ES_CLOUD_ID: ${{ secrets.ES_CLOUD_ID }}
       ES_USERNAME: ${{ secrets.ES_USERNAME }}
       ES_PASSWORD: ${{ secrets.ES_PASSWORD }}
       ES_INDEX: ${{ secrets.ES_INDEX }}
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0
         token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -32,23 +34,91 @@ jobs:
 
     - name: Install dependencies
       run: |
-         pip install --upgrade pip setuptools
-         pip install -r requirements.txt
+        pip install --upgrade pip setuptools
+        pip install -r requirements.txt
 
-    - name: Execute Python script
-      run: python xmls_generator_production.py
-    
+    - name: Debug - Check environment
+      run: |
+        echo "=========================================="
+        echo "🔍 DEBUGGING INFORMATION"
+        echo "=========================================="
+        echo "Current directory: $(pwd)"
+        echo "Python version: $(python --version)"
+        echo ""
+        echo "Checking for required scripts:"
+        ls -la check_missing_authors.py 2>/dev/null && echo "✅ check_missing_authors.py found" || echo "❌ check_missing_authors.py NOT FOUND"
+        ls -la restore_missing_authors.py 2>/dev/null && echo "✅ restore_missing_authors.py found" || echo "❌ restore_missing_authors.py NOT FOUND"
+        echo ""
+        echo "Checking for static directory:"
+        ls -la static/ 2>/dev/null && echo "✅ static/ directory found" || echo "❌ static/ directory NOT FOUND"
+        echo "=========================================="
+
+    - name: Check current status (before restoration)
+      run: |
+        echo "=========================================="
+        echo "📊 CHECKING CURRENT STATUS"
+        echo "=========================================="
+        python check_missing_authors.py
+      continue-on-error: true
+
+    - name: Run restoration script
+      if: ${{ github.event.inputs.dry_run != 'true' }}
+      run: |
+        echo "=========================================="
+        echo "🔧 RESTORING MISSING AUTHORS"
+        echo "=========================================="
+        python restore_missing_authors.py
+
+    - name: Check status after restoration
+      if: ${{ github.event.inputs.dry_run != 'true' }}
+      run: |
+        echo "=========================================="
+        echo "✅ VERIFYING RESTORATION"
+        echo "=========================================="
+        python check_missing_authors.py
+      continue-on-error: true
+
     - name: Configure Git
+      if: ${{ github.event.inputs.dry_run != 'true' }}
       run: |
-         git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
-         git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
+        git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
+        git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
 
-    - name: Add and commit changes
+    - name: Commit and push changes
+      if: ${{ github.event.inputs.dry_run != 'true' }}
       run: |
-        git add .
+        echo "=========================================="
+        echo "💾 COMMITTING CHANGES"
+        echo "=========================================="
+        git add static/
         if git diff --staged --quiet; then
-          echo "No changes to commit"
+          echo "✅ No changes to commit (all files already had authors)"
         else
-          git commit -m "Updated newly generated XML files with threading structure"
+          CHANGED_FILES=$(git diff --staged --name-only | wc -l)
+          echo "📝 Committing $CHANGED_FILES changed files"
+          git commit -m "fix: restore missing author tags in XML files" \
+                     -m "" \
+                     -m "- Restored author information for XML files missing <author> tags" \
+                     -m "- Author data fetched from Elasticsearch" \
+                     -m "- This fixes the issue where threading updater deleted authors" \
+                     -m "" \
+                     -m "Total files restored: Check workflow logs for details"
           git push
+          echo "✅ Changes pushed successfully!"
         fi
+
+    - name: Summary
+      if: always()
+      run: |
+        echo "=========================================="
+        echo "📋 WORKFLOW SUMMARY"
+        echo "=========================================="
+        if [ "${{ github.event.inputs.dry_run }}" == "true" ]; then
+          echo "🔍 DRY RUN MODE - No changes were made"
+          echo "Run without dry_run to actually restore files"
+        else
+          echo "✅ Restoration workflow completed"
+          echo "Check the logs above for detailed results"
+        fi
+        echo "=========================================="
+
