restore deleted authors

--- a/.github/workflows/restore_missing_authors.yml
+++ b/.github/workflows/restore_missing_authors.yml
@@ -1,4 +1,5 @@
-name: Daily XML Generation Script
+name: Restore Missing Authors in XML Files
+
 on:
   workflow_dispatch:  # Manual trigger only - same as other workflows
     inputs:
