--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -1,9 +1,9 @@
 name: Daily XML Generation Script
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Manual trigger only - same as other workflows
     inputs:
       dry_run:
-        description: 'Dry run (check only, no modifications)'
+        description: 'Dry run (check only, no restoration)'
         required: false
         default: 'false'
 
@@ -11,101 +11,114 @@ permissions:
   contents: write
 
 jobs:
-  fix_xml_authors:
+  restore_authors:
     runs-on: ubuntu-latest
+
+    env:
+      ES_CLOUD_ID: ${{ secrets.ES_CLOUD_ID }}
+      ES_USERNAME: ${{ secrets.ES_USERNAME }}
+      ES_PASSWORD: ${{ secrets.ES_PASSWORD }}
+      ES_INDEX: ${{ secrets.ES_INDEX }}
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: 3.10.x
 
     - name: Install dependencies
       run: |
-        pip install requests
+        pip install --upgrade pip setuptools
+        pip install -r requirements.txt
 
-    - name: Run XML UTC author fix script
-      run: |
-        cd $GITHUB_WORKSPACE
-        
-        if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
-          echo "=========================================="
-          echo "🔍 RUNNING IN DRY RUN MODE"
-          echo "=========================================="
-          python fix_xml_utc_authors.py --static-dir static --dry-run
-        else
-          echo "=========================================="
-          echo "🔧 FIXING XML AUTHORS FROM ELASTICSEARCH"
-          echo "=========================================="
-          python fix_xml_utc_authors.py --static-dir static
-        fi
-
-    - name: Check for changes
-      id: check_changes
-      run: |
-        if git diff --quiet; then
-          echo "has_changes=false" >> $GITHUB_OUTPUT
-          echo "✅ No changes to commit"
-        else
-          echo "has_changes=true" >> $GITHUB_OUTPUT
-          echo "📝 Changes detected"
-        fi
-
-    - name: Show changed files
-      if: steps.check_changes.outputs.has_changes == 'true'
+    - name: Debug - Check environment
       run: |
         echo "=========================================="
-        echo "📋 CHANGED FILES"
+        echo "🔍 DEBUGGING INFORMATION"
         echo "=========================================="
-        git diff --name-only
+        echo "Current directory: $(pwd)"
+        echo "Python version: $(python --version)"
         echo ""
-        echo "Total files changed: $(git diff --name-only | wc -l)"
+        echo "Checking for required scripts:"
+        ls -la check_missing_authors.py 2>/dev/null && echo "✅ check_missing_authors.py found" || echo "❌ check_missing_authors.py NOT FOUND"
+        ls -la restore_missing_authors.py 2>/dev/null && echo "✅ restore_missing_authors.py found" || echo "❌ restore_missing_authors.py NOT FOUND"
+        echo ""
+        echo "Checking for static directory:"
+        ls -la static/ 2>/dev/null && echo "✅ static/ directory found" || echo "❌ static/ directory NOT FOUND"
         echo "=========================================="
+
+    - name: Check current status (before restoration)
+      run: |
+        echo "=========================================="
+        echo "📊 CHECKING CURRENT STATUS"
+        echo "=========================================="
+        python check_missing_authors.py
+      continue-on-error: true
+
+    - name: Run restoration script
+      if: ${{ github.event.inputs.dry_run != 'true' }}
+      run: |
+        echo "=========================================="
+        echo "🔧 RESTORING MISSING AUTHORS"
+        echo "=========================================="
+        python restore_missing_authors.py
+
+    - name: Check status after restoration
+      if: ${{ github.event.inputs.dry_run != 'true' }}
+      run: |
+        echo "=========================================="
+        echo "✅ VERIFYING RESTORATION"
+        echo "=========================================="
+        python check_missing_authors.py
+      continue-on-error: true
 
     - name: Configure Git
-      if: steps.check_changes.outputs.has_changes == 'true' && github.event.inputs.dry_run != 'true'
+      if: ${{ github.event.inputs.dry_run != 'true' }}
       run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "actions@github.com"
+        git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
+        git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
 
     - name: Commit and push changes
-      if: steps.check_changes.outputs.has_changes == 'true' && github.event.inputs.dry_run != 'true'
+      if: ${{ github.event.inputs.dry_run != 'true' }}
       run: |
         echo "=========================================="
         echo "💾 COMMITTING CHANGES"
         echo "=========================================="
-        
-        git add static/**/*.xml
-        
-        CHANGED_COUNT=$(git diff --staged --name-only | wc -l)
-        
-        git commit -m "fix: Update XML authors from UTC to correct names
-
-Fixed $CHANGED_COUNT XML files with incorrect 'UTC | newest]' authors.
-Authors were fetched from Elasticsearch and updated in the XMLs.
-
-Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
-        
-        git push
-        
-        echo "✅ Successfully committed and pushed $CHANGED_COUNT fixed XMLs"
-        echo "=========================================="
+        git add static/
+        if git diff --staged --quiet; then
+          echo "✅ No changes to commit (all files already had authors)"
+        else
+          CHANGED_FILES=$(git diff --staged --name-only | wc -l)
+          echo "📝 Committing $CHANGED_FILES changed files"
+          git commit -m "fix: restore missing author tags in XML files" \
+                     -m "" \
+                     -m "- Restored author information for XML files missing <author> tags" \
+                     -m "- Author data fetched from Elasticsearch" \
+                     -m "- This fixes the issue where threading updater deleted authors" \
+                     -m "" \
+                     -m "Total files restored: Check workflow logs for details"
+          git push
+          echo "✅ Changes pushed successfully!"
+        fi
 
     - name: Summary
       if: always()
       run: |
         echo "=========================================="
-        echo "✅ WORKFLOW COMPLETED"
+        echo "📋 WORKFLOW SUMMARY"
         echo "=========================================="
-        if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
-          echo "Mode: DRY RUN (no files modified)"
+        if [ "${{ github.event.inputs.dry_run }}" == "true" ]; then
+          echo "🔍 DRY RUN MODE - No changes were made"
+          echo "Run without dry_run to actually restore files"
         else
-          echo "Mode: FIX (files were modified and committed)"
+          echo "✅ Restoration workflow completed"
+          echo "Check the logs above for detailed results"
         fi
         echo "=========================================="
 
