--- a/.github/workflows/fix_xml_utc_authors.yml
+++ b/.github/workflows/fix_xml_utc_authors.yml
@@ -70,12 +70,7 @@ jobs:
           # Count changed files
           CHANGED_COUNT=$(git diff --staged --name-only | wc -l)
           
-          git commit -m "fix: Update XML authors from UTC to correct names
-
-Fixed $CHANGED_COUNT XML files with incorrect 'UTC | newest]' authors.
-Authors were fetched from Elasticsearch and updated in the XMLs.
-
-Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+          git commit -m "fix: Update XML authors from UTC to correct names"
           
           git push
           
