--- a/.github/workflows/xmls_gen_cron_job.yml
+++ b/.github/workflows/xmls_gen_cron_job.yml
@@ -34,91 +34,66 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools
-        pip install -r requirements.txt
-
-    - name: Debug - Check environment
+        pip install requests
+    
+    - name: Run XML author fix script
       run: |
-        echo "=========================================="
-        echo "🔍 DEBUGGING INFORMATION"
-        echo "=========================================="
-        echo "Current directory: $(pwd)"
-        echo "Python version: $(python --version)"
-        echo ""
-        echo "Checking for required scripts:"
-        ls -la check_missing_authors.py 2>/dev/null && echo "✅ check_missing_authors.py found" || echo "❌ check_missing_authors.py NOT FOUND"
-        ls -la restore_missing_authors.py 2>/dev/null && echo "✅ restore_missing_authors.py found" || echo "❌ restore_missing_authors.py NOT FOUND"
-        echo ""
-        echo "Checking for static directory:"
-        ls -la static/ 2>/dev/null && echo "✅ static/ directory found" || echo "❌ static/ directory NOT FOUND"
-        echo "=========================================="
-
-    - name: Check current status (before restoration)
-      run: |
-        echo "=========================================="
-        echo "📊 CHECKING CURRENT STATUS"
-        echo "=========================================="
-        python check_missing_authors.py
-      continue-on-error: true
-
-    - name: Run restoration script
-      if: ${{ github.event.inputs.dry_run != 'true' }}
-      run: |
-        echo "=========================================="
-        echo "🔧 RESTORING MISSING AUTHORS"
-        echo "=========================================="
-        python restore_missing_authors.py
-
-    - name: Check status after restoration
-      if: ${{ github.event.inputs.dry_run != 'true' }}
-      run: |
-        echo "=========================================="
-        echo "✅ VERIFYING RESTORATION"
-        echo "=========================================="
-        python check_missing_authors.py
-      continue-on-error: true
-
-    - name: Configure Git
-      if: ${{ github.event.inputs.dry_run != 'true' }}
-      run: |
-        git config user.email "${{ secrets.GIT_AUTHOR_EMAIL }}"
-        git config user.name "${{ secrets.GIT_AUTHOR_NAME }}"
-
-    - name: Commit and push changes
-      if: ${{ github.event.inputs.dry_run != 'true' }}
-      run: |
-        echo "=========================================="
-        echo "💾 COMMITTING CHANGES"
-        echo "=========================================="
-        git add static/
-        if git diff --staged --quiet; then
-          echo "✅ No changes to commit (all files already had authors)"
+        cd /home/runner/work/tldr/tldr/summarizer || cd $GITHUB_WORKSPACE
+        
+        if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
+          echo "🔍 Running in DRY RUN mode"
+          python fix_xml_utc_authors.py --static-dir static --dry-run
         else
-          CHANGED_FILES=$(git diff --staged --name-only | wc -l)
-          echo "📝 Committing $CHANGED_FILES changed files"
-          git commit -m "fix: restore missing author tags in XML files" \
-                     -m "" \
-                     -m "- Restored author information for XML files missing <author> tags" \
-                     -m "- Author data fetched from Elasticsearch" \
-                     -m "- This fixes the issue where threading updater deleted authors" \
-                     -m "" \
-                     -m "Total files restored: Check workflow logs for details"
-          git push
-          echo "✅ Changes pushed successfully!"
+          echo "🔧 Running in FIX mode"
+          python fix_xml_utc_authors.py --static-dir static
         fi
-
+    
+    - name: Check for changes
+      id: check_changes
+      run: |
+        if git diff --quiet; then
+          echo "has_changes=false" >> $GITHUB_OUTPUT
+          echo "✅ No changes to commit"
+        else
+          echo "has_changes=true" >> $GITHUB_OUTPUT
+          echo "📝 Changes detected"
+        fi
+    
+    - name: Show changed files
+      if: steps.check_changes.outputs.has_changes == 'true'
+      run: |
+        echo "Changed files:"
+        git diff --name-only
+        echo ""
+        echo "Number of changed files:"
+        git diff --name-only | wc -l
+    
+    - name: Commit and push changes
+      if: steps.check_changes.outputs.has_changes == 'true' && github.event.inputs.dry_run != 'true'
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "actions@github.com"
+        
+        git add static/**/*.xml
+        
+        # Count changed files
+        CHANGED_COUNT=$(git diff --staged --name-only | wc -l)
+        
+        git commit -m "fix: Update XML authors from UTC to correct names"
+        
+        git push
+        
+        echo "✅ Committed and pushed $CHANGED_COUNT fixed XMLs"
+    
     - name: Summary
       if: always()
       run: |
-        echo "=========================================="
-        echo "📋 WORKFLOW SUMMARY"
-        echo "=========================================="
-        if [ "${{ github.event.inputs.dry_run }}" == "true" ]; then
-          echo "🔍 DRY RUN MODE - No changes were made"
-          echo "Run without dry_run to actually restore files"
+        echo "============================================"
+        echo "✅ Workflow completed"
+        echo "============================================"
+        if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
+          echo "Mode: DRY RUN (no files modified)"
         else
-          echo "✅ Restoration workflow completed"
-          echo "Check the logs above for detailed results"
+          echo "Mode: FIX (files were modified and committed)"
         fi
-        echo "=========================================="
-
+        echo "============================================"
